--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -2,58 +2,64 @@
   font-family: inherit;
   font-size: 80px;
   font-weight: bold;
-  letter-spacing: .03em;
+  letter-spacing: 0.03em;
   color: #1c1c1c;
+  line-height: 1em;
 }
 
 .fontset_e_m {
   font-family: inherit;
   font-size: 40px;
   font-weight: 600;
-  letter-spacing: .03em;
+  letter-spacing: 0.03em;
   line-height: 1;
   color: #1c1c1c;
+  line-height: 1em;
 }
 
 .fontset_e_s {
   font-family: inherit;
   font-size: 17px;
   font-weight: bold;
-  letter-spacing: .03em;
+  letter-spacing: 0.03em;
   line-height: 1.647;
   color: #1c1c1c;
+  line-height: 1em;
 }
 
 .fontset_e_xs {
   font-family: inherit;
   font-size: 14px;
   font-weight: bold;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
   color: #838383;
+  line-height: 1em;
 }
 
 .fontset_j_l {
   font-family: inherit;
   font-size: 30px;
   font-weight: bold;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
   color: #1c1c1c;
+  line-height: 1em;
 }
 
 .fontset_j_m {
   font-family: inherit;
   font-size: 20px;
   font-weight: bold;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
   line-height: 1.2;
   color: #1c1c1c;
+  line-height: 1em;
 }
 
 .fontset_j_s {
   font-family: inherit;
   font-size: 14px;
   font-weight: 500;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
   line-height: 1.142;
   color: #1c1c1c;
 }
@@ -62,7 +68,7 @@
   font-family: inherit;
   font-size: 13px;
   font-weight: bold;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
   line-height: 1.153;
   color: #838383;
 }
@@ -71,7 +77,7 @@
   font-family: inherit;
   font-size: 12px;
   font-weight: bold;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
   line-height: 1.166;
   color: #838383;
 }
@@ -80,10 +86,10 @@
   font-family: inherit;
   font-size: 17px;
   font-weight: bold;
-  letter-spacing: .2em;
+  letter-spacing: 0.2em;
   color: white;
   text-align: center;
-  background: #36BCAC;
+  background: #36bcac;
   display: block;
   border: 0;
   border-radius: 9999px;
