--- a/styles/app.css
+++ b/styles/app.css
@@ -2,34 +2,31 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  line-height: 1.6;
+  font-family: 'SF Pro', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* line-height: ; */
   font-size: 18px;
+  background: #f2f2f2;
 }
-
 * {
   box-sizing: border-box;
 }
-
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  line-height: 1;
+}
 a {
-  color: #0070f3;
+  color: inherit;
   text-decoration: none;
 }
-
-a:hover {
-  text-decoration: underline;
-}
-
 img {
   max-width: 100%;
   display: block;
 }
-
-h1 {
-  color: rgb(0, 255, 106);
-}
-h2 {
-  margin: 0;
-  padding: 0;
+li {
+  list-style: none;
 }
