--- a/styles/app.css
+++ b/styles/app.css
@@ -2,15 +2,17 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'SF Pro', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'SF Pro', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   /* line-height: ; */
   font-size: 18px;
   background: #f2f2f2;
 }
+
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
+
 h1,
 h2,
 h3,
@@ -19,14 +21,97 @@ h5,
 h6 {
   line-height: 1;
 }
+
 a {
   color: inherit;
   text-decoration: none;
 }
+
 img {
   max-width: 100%;
   display: block;
+  border-radius: 9px;
 }
+
 li {
   list-style: none;
 }
+
+.id_article {
+  width: 1112px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.id_article img, .id_article iframe {
+  margin: 0 auto;
+  margin-bottom: 74px;
+}
+
+.id_article iframe {
+  width: 100%;
+}
+
+.id_article h1 {
+  padding-bottom: 10px;
+}
+
+.id_article h2 {
+  font-family: inherit;
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: 0.02em;
+  line-height: 1.2;
+  color: #1c1c1c;
+  padding-left: 17px;
+  margin-bottom: 74px;
+  position: relative;
+}
+
+.id_article h2:before {
+  position: absolute;
+  content: '';
+  width: 6px;
+  height: calc(100% + 22px);
+  border-radius: 50px;
+  background: #36bcac;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.id_article .subtitle {
+  padding-bottom: 42px;
+  margin-left: 5px;
+}
+
+.id_article .categories {
+  padding-bottom: 5px;
+  margin-left: 5px;
+}
+
+.id_article .content {
+  max-width: 720px;
+  margin: 0 auto;
+}
+
+.id_article .content img {
+  min-width: calc(100% + 230px);
+  -webkit-transform: translateX(-115px);
+          transform: translateX(-115px);
+}
+
+.id_article .content p {
+  margin-bottom: 74px;
+}
+/*# sourceMappingURL=app.css.map */
