--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -16,6 +16,7 @@ $breakpoints: (
 // color
 $colorBase: #f2f2f2;
 $colorSub: #1c1c1c;
+$colorText: #404040;
 $colorThin: #838383;
 $colorAccent: #36bcac;
 
