--- a/styles/app.scss
+++ b/styles/app.scss
@@ -5,8 +5,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'SF Pro', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, system-ui, "Helvetica Neue", "Segoe UI", "Hiragino Kaku Gothic ProN", "Hiragino Sans", "ヒラギノ角ゴ ProN W3", Arial, メイリオ, Meiryo, sans-serif;;
   /* line-height: ; */
   font-size: 18px;
   background: #f2f2f2;
@@ -48,6 +47,16 @@ li {
   iframe{
       width: 100%;
   }
+  .time{
+    font-family: inherit;
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 0.02em;
+    line-height: 1;
+    color: #838383;
+    margin-left: 5px;
+    padding-bottom: 40px;
+  }
   h1{
     padding-bottom: 10px;
   }
@@ -57,7 +66,29 @@ li {
     font-weight: bold;
     letter-spacing: 0.02em;
     line-height: 1.2;
-    color: $colorSub;
+    color: $colorText;
+    padding-left: 17px;
+    margin-bottom: 44px;
+    position: relative;
+    &:before{
+      position: absolute;
+      content: '';
+      width: 6px;
+      height: calc(100% + 22px);
+      border-radius: 50px;
+      background: $colorAccent;
+      top: 50%;
+      left: 0;
+      transform: translateY(-50%);
+    }
+  }
+  h3{
+    font-family: inherit;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 0.02em;
+    line-height: 1.2;
+    color: $colorText;
     padding-left: 17px;
     margin-bottom: $mb;
     position: relative;
@@ -65,7 +96,7 @@ li {
       position: absolute;
       content: '';
       width: 6px;
-      height: calc(100% + 22px);
+      height: 6px;
       border-radius: 50px;
       background: $colorAccent;
       top: 50%;
@@ -83,13 +114,33 @@ li {
   }
   .content{
       max-width: 720px;
+      width: 100%;
       margin: 0 auto;
       img{
         min-width: calc(100% + 230px);
         transform: translateX(-115px);
       }
       p{
+        font-family: inherit;
+        font-size: 16px;
+        font-weight: 400;
+        letter-spacing: .1em;
+        line-height: 1.514;
+        color: $colorText;
         margin-bottom: $mb;
+        strong{
+          font-weight: 600;
+        }
+        a{
+          color: $colorAccent;
+        }
       }
+      blockquote {
+        color: $colorText;
+        font-size: 16px;
+        padding: 16px 32px;
+        background: #fff;
+        border-radius: 9px;
+    }
   }
 }
