--- a/styles/firstView.module.css
+++ b/styles/firstView.module.css
@@ -1,6 +1,6 @@
 .section {
   height: 70vh;
-  background: #36bcac;
+  background: #f4f4f4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
