--- a/styles/firstView.module.scss
+++ b/styles/firstView.module.scss
@@ -1,7 +1,7 @@
 @import '_base.scss';
 .section{
     height: 70vh;
-    background: $colorAccent;
+    background: $colorBase;
     display: flex;
     justify-content: center;
     align-items: center;
