--- a/styles/top.module.css
+++ b/styles/top.module.css
@@ -24,7 +24,7 @@
 }
 
 .section .buttons_box button.fontset_e_s:hover {
-  color: #1c1c1c;
+  color: #383838;
 }
 
 .section .buttons_box button.active {
