--- a/styles/top.module.scss
+++ b/styles/top.module.scss
@@ -19,7 +19,7 @@
                 background: inherit;
                 margin-right: 20px;
                 &:hover{
-                    color: $colorSub;
+                    color: $colorText;
                 }
               }
             &.active{
