--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -2,11 +2,10 @@
 
 footer{
     width: 100%;
-    // height: 380px;
     padding: 40px 80px 20px;
     background: $colorBlack;
     color: $colorWhite;
-    .content{
+    .contents{
         max-width: $max-width;
         margin: 0 auto;
         .logo{
@@ -28,6 +27,49 @@ footer{
             }
             span:last-child{
                 margin-right: 0;
+            }
+        }
+        .bottom{
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;
+            flex-wrap: wrap;
+            margin: 120px 0 0 0;
+            position: relative;
+            .icon{
+                margin: 0 0 0 2px;
+                a{
+                    margin: 0 20px 0 0;
+                }
+                a:last-child{
+                    margin: 0;
+                }
+            }
+            .editor{
+                font-family: "SF Pro";
+                font-size: 17px;
+                font-weight: 600;
+                letter-spacing: 0.03em;
+                margin: 0 2px 0 0;
+            }
+            p{
+                color: $colorThin;
+                font-family: "SF Pro";
+                font-size: 13px;
+                font-weight: 600;
+                letter-spacing: 0.02em;
+                width: 100%;
+                margin: 10px 0 0 2px;
+            }
+            &:before{
+                position: absolute;
+                content: "";
+                width: 100%;
+                height: 4px;
+                background: $colorWhite;
+                border-radius: 50px;
+                top: 36px;
+                left: 0;
             }
         }
     }
