--- a/styles/orgs/_header.scss
+++ b/styles/orgs/_header.scss
@@ -1,4 +1,4 @@
-@import './base';
+@import '../base';
 header{
     width: 100%;
     height: 80px;
@@ -29,6 +29,18 @@ header{
         }
         span:last-child{
             margin-right: 0;
+        }
+    }
+    .icon{
+        position: fixed;
+        bottom: 40px;
+        right: 39px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px 0;
+        svg{
+            width: 30px;
+            fill: $colorBlack;
         }
     }
 }
