--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,6 @@ body {
     'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', 'メイリオ', 'Meiryo',
     'ＭＳ Ｐゴシック', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 
-  color: #1c1c1c;
+  color: #1c1918;
   letter-spacing: 0.03rem;
 }
