--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,25 @@
+a{
+  cursor: pointer;
+}
+
+#nprogress{
+  border-radius: 9999px;
+  overflow: hidden;
+}
+
 .max-width{
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0 1rem;
+
+
+  @media screen and (min-width: 768px){
   padding: 0 5rem;
+  }
+
+  @media screen and (min-width: 640px){
+    padding: 0 2rem;
+  }
 }
 
 .bg{
@@ -13,6 +31,30 @@
   }
   &-black{
     background: #1C1C1C
+  }
+  &-main{
+    background: #2FA597;
+  }
+  &-conponent{
+    padding: 33px;
+    border: solid 1px #9ca3af;
+    border-radius: 8px;
+    background-size: 36px 36px;
+    background-position: 50% 50%;
+    background-image:repeating-linear-gradient(
+      90deg,
+      #9ca3af ,
+      #9ca3af 1px,
+      transparent 1px,
+      transparent 36px
+    ),
+    repeating-linear-gradient(
+      0deg,
+      #9ca3af ,
+      #9ca3af 1px,
+      transparent 1px,
+      transparent 36px
+    );
   }
 }
 
@@ -41,5 +83,59 @@
     top: -10px;
     left: 50%;
     transform: translateX(-50%);
+  }
+}
+
+// articleのコンテンツ内用
+.main__contents{
+  h2{
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+  }
+
+  h3{
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+  }
+
+  p{
+    margin-bottom: 1.5rem;
+  }
+
+  img, iframe{
+    display: block;
+    margin: 0 auto;
+    // min-width: calc(100% + 144px);
+    // max-width: calc(100% + 144px);
+    min-width: calc(100%);
+    max-width: calc(100%);
+    // transform: translateX(-72px)
+  }
+
+  pre {
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 1.5rem;
+  }
+
+  blockquote{
+    padding-left: 1.5rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    position: relative;
+    margin-bottom: 1.5rem;
+
+    &:before{
+      position: absolute;
+      content: "";
+      width: 0.275rem;
+      height: 100%;
+      background-color: #9ca3af;
+      border-radius: 999px;
+      left: 0;
+      top: 0;
+    }
   }
 }
