--- a/styles/style.scss
+++ b/styles/style.scss
@@ -37,7 +37,7 @@ a{
     background: #2FA597;
   }
   &-conponent{
-    padding: 33px;
+    padding: 12px;
     border: solid 1px #9ca3af;
     border-radius: 8px;
     background-size: 36px 36px;
@@ -56,6 +56,10 @@ a{
       transparent 1px,
       transparent 36px
     );
+
+    @media screen and (min-width: 768px){
+      padding: 33px;
+    }
   }
 }
 
